# inventory-deluxe

./: Cargo.toml
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: listener.rs  main.rs  prelude.rs
client/src/state/: abilities.rs  backpack.rs  board.rs  character.rs  chat.rs  chat_god.rs  mod.rs
client/src/state/board/: mod.rs  pieces.rs
client/src/view/: abilities.rs  backpack.rs  board.rs  character.rs  chat.rs  items.rs  mod.rs  multi_select.rs  settings.rs
client/src/view/board/: board_render.rs  mod.rs  properties_window.rs  selected_ui.rs
client/src/view/character_sheet/: abilities.rs  attributes.rs  biography.rs  inventory.rs  mod.rs  overview.rs  skills_table.rs  tabs.rs
client/src/view/edit/: ability.rs  mod.rs
client/src/widgets/: frames.rs  group.rs  mod.rs  stat_tile.rs  toggle_icon.rs
common/: Cargo.toml
common/src/: board.rs  data_store.rs  lib.rs  message.rs
server/: Cargo.toml
server/src/: db_types.rs  main.rs
server/src/tasks/: backpack.rs  board.rs  data_store.rs  db.rs  log.rs  mod.rs  server.rs
