[workspace]
members = ["client", "common", "server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
env_logger = "0.11.5"
serde = { version = "1.0.210", features = ["serde_derive"] }
bincode = "1.3.3"
message-io = "0.18.2"
