[workspace]
members = ["client", "common", "server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["serde_derive"] }
bincode = "1.3.3"
message-io = "0.18.2"
emath = { version = "0.28.1", features = ["serde"] }
uuid = { version = "1.10.0", features = [
  "zerocopy",
  "v4",
  "bytemuck",
  "serde",
] }
itertools = "0.13.0"
