[workspace]
members = ["client", "common", "server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["serde_derive", "rc"] }
bincode = "1.3.3"
message-io = "0.18.2"
emath = { version = "0.31.1", features = ["serde"] }
uuid = { version = "1.10.0", features = [
  "zerocopy",
  "v4",
  "bytemuck",
  "serde",
] }
itertools = "0.13.0"
rand = "0.9.0"
thiserror = "2.0.11"
anyhow = "1.0.97"
typetag = "0.2.20"
derive_more = { version = "2.0.1", features = ["full"] }
tryvial = "0.2.0"
strum = "0.27"
strum_macros = "0.27"
