[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
eframe = "0.28.1"
egui = { version = "0.28.1", features = ["serde"] }
egui_dock = "0.13.0"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
env_logger = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
message-io = { workspace = true }
log = { workspace = true }
clap = { version = "4.5.17", features = ["derive"] }
