[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
eframe = "0.28.1"
egui = { version = "0.28.1", features = ["serde"] }
egui_dock = "0.13.0"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png", "gif"] }
env_logger = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
message-io = { workspace = true }
log = { workspace = true }
uuid = { workspace = true, features = ["zerocopy", "v4", "bytemuck", "serde"] }
clap = { version = "4.5.17", features = ["derive"] }
emath = { workspace = true }
itertools = { workspace = true }
egui_demo_lib = "0.28.1"
