[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
eframe = "0.31.1"
egui = { version = "0.31.1", features = ["serde"] }
egui_dock = { version = "0.16.0", features = ["serde"] }
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
egui_dnd = "0.12.0"
image = { version = "0.25", features = ["jpeg", "png", "gif"] }
env_logger = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
message-io = { workspace = true }
log = { workspace = true }
uuid = { workspace = true, features = ["zerocopy", "v4", "bytemuck", "serde"] }
clap = { version = "4.5.17", features = ["derive"] }
emath = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
egui_demo_lib = "0.31.1"
regex = "1.11.1"
once_cell = "1.21.3"
rand = { workspace = true }
typetag = { workspace = true }
egui-phosphor = { version = "0.9.0", features = [
  "bold",
  "regular",
  "fill",
  "light",
  "thin",
] }
