[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
emath = { workspace = true }
typetag = { workspace = true }
derive_more = { workspace = true }
