[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde = { workspace = true }
bincode = { workspace = true }
message-io = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
postgrest = "1.6.0"
dotenv = "0.15.0"
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
reqwest = "0.11.27"
ctrlc = "3.4"
thiserror = { workspace = true }
typetag = { workspace = true }
anyhow = { workspace = true }
emath = { workspace = true }
